syntax = "proto3";
option java_multiple_files = true;
package br.com.proto;

message ContextRequest {
	string key = 1;
	string value = 2;
}

message ContextResponse {
	string message = 1;
}

service ContextService {
	rpc insert(ContextRequest) returns (ContextResponse);
	rpc update(ContextRequest) returns (ContextResponse);
	rpc delete(ContextRequest) returns (ContextResponse);
	rpc find(ContextRequest) returns (ContextResponse);
}
